Fixed the layout of commenting area, making the scrollbar hidden by marginRight='-15px'

--- a/src/styles/audioElements.css
+++ b/src/styles/audioElements.css
@@ -45,6 +45,32 @@
   overflow: hidden;
   position: relative;
 
+  & > section:nth-child(1) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    z-index: 10;
+
+    & > img {
+      border: 3px solid #fff;
+      border-radius: 3px;
+    }
+  }
+
+  & > section:nth-child(2) {
+    position: relative;
+    height: 100%;
+    overflow: auto;
+    z-index: 10;
+    font-size: 35px;
+    /*border: 2px solid #f00;*/
+
+    & > p {
+      width: 100%;
+    }
+  }
+
   & > img {
     width: 100%;
     height: 100%;
@@ -64,28 +90,6 @@
     top: 0;
     left: 0;
   }
-}
-
-.songImageLeft {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 50%;
-  height: 100%;
-  z-index: 10;
-
-  & > img {
-    border: 2px solid #fff;
-    border-radius: 3px;
-  }
-}
-
-.songImageRight {
-  width: 50%;
-  height: 100%;
-  z-index: 10;
-  font-size: 40px;
-  color: #fff;
 }
 
 .audioTitleTime {
